# Copyright 2019 LG Electronics, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

import("//neva/neva.gni")

source_set("neva") {
  deps = [ "//third_party/boringssl" ]

  sources = [ "appdrm_common.h" ]

  if (use_appdrm) {
    assert(is_webos, "use_appdrm should be enabled under webOS only")
    deps += [ "//net/neva/webos" ]
  } else {
    sources += [ "appdrm_file_manager_stub.cc" ]
  }

  configs += [ "//net:net_internal_config" ]
  deps += [ "//mojo/public/cpp/system" ]
}
