# Copyright 2019 LG Electronics, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

import("//build/config/linux/pkg_config.gni")

pkg_config("appdrm_config") {
  packages = [ "libsm_appdrm" ]
}

source_set("webos") {
  configs += [
    ":appdrm_config",
    "//build/config/linux:glib",
  ]

  sources = [
    "appdrm_file_manager.cc",
    "appdrm_file_manager.h",
  ]

  deps = [
    "//base",
    "//third_party/boringssl",
  ]
}
