# Copyright 2019 LG Electronics, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

import("//neva/neva.gni")
import("//build/config/linux/pkg_config.gni")

pkg_config("dile_crypto_config") {
  packages = [ "crypto" ]
}

source_set("neva") {
  public_configs = [ ":dile_crypto_config" ]
  sources = [
    "platform_certificates.cc",
    "platform_certificates.h",
  ]
  deps = [
    "//base",
    "//crypto:platform"
  ]
}
